<resources>
    <string name="app_name">Room_Calcio</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_ain">ain</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="forgotTitle">Forgot password</string>
    <string name="update_password">Update password</string>
    <!-- <string name="forgot_password">Forgot password Click Here..</string>-->
    <string name="logout">Are you sure want to Logout ?</string>
    <string name="signout">Logout</string>
    <string name="order_confirm_msg">Are you sure want to Submit the Order ?</string>


    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="not_existed">User doesn\'t exists. Invalid login or password. Please Register first.</string>

    <string name="login_username">Login</string>
    <string name="login_password">Password</string>
    <string name="login_name">Please Enter your Name</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter password</string>
    <string name="login_submit">Submit</string>

    <string name="register"><html><u>Register Here</u></html></string>
    <string name="forgot_password">Forgot password </string>


</resources>
