<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/login_username"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20"
            android:visibility="gone"

            />

        <!-- <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
             android:background="@drawable/bg1"
             android:ems="10"
             android:inputType="number"
             android:maxLength="10"
             android:imeOptions="actionNext"
             android:layout_margin="@dimen/dp_10"
             android:padding="@dimen/dp_20"
             android:textColorHint="@android:color/black"
             android:textSize="@dimen/sp_15"
             android:hint="@string/login_mobile_hint"
             android:gravity="center"
             android:id="@+id/loginMobile" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_email_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/dp_15"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/sp_18" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:text="@string/login_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20"
            android:visibility="gone" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/dp_15"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/sp_18" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/login_submit"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:id="@+id/loginForgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>